# VKAndroid

./: CMakeLists.txt  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/vkandroid/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/: triangle.vert.spv
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/shaders/: triangle.frag  triangle.vert
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/vkandroid/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
